--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -43,7 +43,7 @@
   
             <div class="select-contract">
               <div class="div_file_attach">
-                <div *ngIf="!datasForm.fileAttachForm || datasForm.fileAttachForm.length == 0" style="color:gray">{{'choose.contract.file.attach' |
+                <div *ngIf="!datasForm.fileAttachForm || datasForm.fileAttachForm.length == 0" style="color: #AEC7E5; font-size: 12px; font-weight: 500; line-height: 21px;">{{'choose.contract.file.attach' |
                   translate }}</div>
                 <div *ngFor="let item of datasForm.fileAttachForm; let i = index" style="width: 80%;">
                   {{item.filename ? item.filename : item.name}} <img *ngIf="item" style="cursor: pointer;" (click)="deleteFileAttach(item, i)"
