--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.scss
@@ -157,3 +157,7 @@
   line-height: 21px;
   margin: auto 0px auto 16px;
 }
+
+.hover-item:hover {
+  border: 1px solid #286CF5 !important; /* Thay đổi màu viền khi hover */
+}
