--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -263,6 +263,10 @@ body {
   margin-top: 16px !important;
 }
 
+.mt-18px {
+  margin-top: 18px !important;
+}
+
 .mt-20px {
   margin-top: 20px !important;
 }
