FE: sửa text ký thành công/không thành công tất cả loại ký

--- a/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/image-dialog-sign-v2/image-dialog-sign-v2.component.html
@@ -62,8 +62,8 @@
                      (change)="fileChangedAttach($event)" style="display: none;">
               <div class="select-contract container-img-file" (click)="addFileAttach()">
                 <div class="upload-image-region d-flex flex-column container-img-file-1">
-                  <div style="color: #00186D; font-weight: 700; display: flex" class="text-choose-file">Kéo thả hoặc tải ảnh lên &nbsp;<p style="color: #286CF5"> Tại đây</p></div>
-                  <div class="text-support-extension">Hỗ trợ file PNG, JPG. JPEG</div>
+                  <div style="color: #00186D; font-weight: 700; display: flex" class="text-choose-file">Tải ảnh lên</div>
+                  <div class="text-support-extension">Hỗ trợ file PNG, JPG, JPEG</div>
                 </div>
               </div>
             </div>
